# omprs-gdk

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
examples/grandlarc/: Cargo.toml
examples/grandlarc/src/: lib.rs  minigun.rs  spawns.rs
omp/: Cargo.toml
omp-codegen/: Cargo.toml
omp-codegen/src/: callbacks.rs  entrypoint.rs  lib.rs  natives.rs
omp-gdk/: Cargo.toml
omp-gdk/src/: events.rs  helper.rs  lib.rs  runtime.rs
omp-gdk/src/scripting/: mod.rs
omp-gdk/src/scripting/actors/: events.rs  functions.rs  mod.rs
omp-gdk/src/scripting/checkpoints/: events.rs  functions.rs  mod.rs
omp-gdk/src/scripting/classes/: events.rs  functions.rs  mod.rs
omp-gdk/src/scripting/core/: events.rs  functions.rs
omp-gdk/src/scripting/dialogs/: events.rs  functions.rs  mod.rs
omp-gdk/src/scripting/gangzones/: events.rs  functions.rs  mod.rs
omp-gdk/src/scripting/menus/: events.rs  functions.rs  mod.rs
omp-gdk/src/scripting/models/: events.rs  functions.rs  mod.rs
omp-gdk/src/scripting/objects/: events.rs  functions.rs  mod.rs
omp-gdk/src/scripting/pickups/: events.rs  functions.rs  mod.rs
omp-gdk/src/scripting/players/: events.rs  functions.rs  mod.rs
omp-gdk/src/scripting/textdraws/: events.rs  functions.rs  mod.rs
omp-gdk/src/scripting/textlabels/: functions.rs  mod.rs
omp-gdk/src/scripting/vehicles/: events.rs  functions.rs  mod.rs
omp-gdk/src/types/: animationdata.rs  colour.rs  mod.rs  network.rs  staticarray.rs  stringview.rs  vector.rs
omp/src/: lib.rs  runtime.rs
omprs/: Cargo.toml
omprs-codegen/: Cargo.toml
omprs-codegen/src/: callbacks.rs  entrypoint.rs  lib.rs  natives.rs
omprs-gdk/: Cargo.toml
omprs-gdk/src/: actors.rs  events.rs  helper.rs  lib.rs  models.rs  objects.rs  players.rs  runtime.rs  utils.rs  vehicles.rs
omprs-gdk/src/functions/: actors.rs  mod.rs  models.rs  players.rs
omprs-gdk/src/scripting/: mod.rs
omprs-gdk/src/scripting/actors/: events.rs  functions.rs  mod.rs
omprs-gdk/src/scripting/checkpoints/: events.rs  functions.rs  mod.rs
omprs-gdk/src/scripting/classes/: events.rs  functions.rs  mod.rs
omprs-gdk/src/scripting/core/: events.rs  functions.rs  mod.rs
omprs-gdk/src/scripting/dialogs/: events.rs  functions.rs  mod.rs
omprs-gdk/src/scripting/gangzones/: events.rs  functions.rs  mod.rs
omprs-gdk/src/scripting/menus/: events.rs  functions.rs  mod.rs
omprs-gdk/src/types/: animationdata.rs  colour.rs  hybridstring.rs  mod.rs  network.rs  staticarray.rs  stringview.rs  vector.rs  vector3.rs
omprs/src/: lib.rs  runtime.rs
(+20 files in other folders)
