[package]
name = "omp-gdk"
version = "2.0.0"
authors = ["Sreyas <sreyassreelal@gmail.com>"]
description = "Rust SDK for developing open.mp gamemodes"
license = "Apache-2.0"
repository = "https://github.com/sreyas-sreelal/omprs-gdk/"
edition = "2021"

[dependencies]
log = "0.4"
omp-codegen = { path = "../omp-codegen", version = "1.0.0" }
paste = "1.0"
uuid = { version = "1.9.1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }
