[package]
name = "omp"
version = "2.0.0"
authors = ["Sreyas <sreyassreelal@gmail.com>"]
description = "Rust SDK for developing open.mp gamemodes"
license = "Apache-2.0"
repository = "https://github.com/sreyas-sreelal/omprs-gdk/"
edition = "2021"

[dependencies]
omp-gdk = {path="../omp-gdk",version="2.0.0"}